W-18350339: Clear bean utils descriptors cache when mule artifact context is closed (#14359) (#14362)
(cherry picked from commit 1e00037e62f4add220617958b80768bb4ac893d6)